закінчила планшетну версію

--- a/src/partials/program-section.html
+++ b/src/partials/program-section.html
@@ -120,7 +120,7 @@
             media="(max-width: 767px)" />
             <source 
             srcset="./images/program-section/pic-desk@1x.jpg 1x, ./images/program-section/pic-desk@2x.jpg 2x"
-            media="(min-width: 1200px)" />
+            media="(min-width: 1344px)" />
             <source 
             srcset="./images/program-section/pic-tab@1x.jpg 1x, ./images/program-section/pic-tab@2x.jpg 2x"
             media="(min-width: 768px)" />  
@@ -133,7 +133,7 @@
 
 <!-- Секция почему нас выбирают -->
 <section class="section choose-section">
-    <div class="container">
+    <!-- <div class="container"> -->
         <div class="title-wrapper">
             <h2 class="title">Почему нас выбирают</h2>
         </div>
@@ -162,7 +162,7 @@
             </ul>
         </div>
         
-    </div>
+    <!-- </div> -->
    
 </section>
 
