--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -104,10 +104,13 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1314px) {
   .how-we-do-it-item {
     width: 425px;
     height: 396px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 40px 30px 55px 30px;
   }
 
   .how-we-do-it-item {
