--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -1,19 +1,40 @@
 .program {
   position: relative;
-  padding: 50px 20px;
-  padding-bottom: 537px;
   background-color: var(--primary-text-color);
   color: var(--white-text-color);
-
+  padding-top: 50px;
+  padding-bottom: 537px;
   margin-bottom: 270px;
+  padding: 50px 20px;
+
+  @media screen and (min-width: 768px) and (max-width: 1679px) {
+    padding: 60px 40px;
+    padding-bottom: 392px;
+    margin-bottom: 302px;
+  }
 
   &__title {
-    text-align: center;
     margin-bottom: 43px;
     margin-left: auto;
     margin-right: auto;
-
     width: 280px;
+
+    font-family: var(--primary-font-family);
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    color: var(--white-text-color);
+
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
+    @media screen and (min-width: 768px) and (max-width: 1679px) {
+      margin-bottom: 52px;
+      width: 688px;
+
+      font-size: 26px;
+    }
   }
 
   &__wraper {
@@ -30,7 +51,7 @@
 
   &__items {
     display: block;
-    min-width: 176px;
+    width: 190px;
 
     margin-left: auto;
 
@@ -41,7 +62,7 @@
       height: 1320px;
       position: absolute;
       top: 15px;
-      left: 78px;
+      left: 64px;
 
       background-color: var(--white-text-color);
     }
@@ -155,8 +176,8 @@
       content: '';
       display: block;
       position: absolute;
-      left: 180px;
-      bottom: -0;
+      left: 170px;
+      bottom: 7px;
       width: 120px;
       height: 137px;
 
