--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -106,11 +106,17 @@
 
 @media screen and (min-width: 1314px) {
   .how-we-do-it-item {
-    width: 425px;
+    min-width: 425px;
     height: 396px;
     margin-right: 20px;
     margin-bottom: 20px;
     padding: 40px 30px 55px 30px;
+  }
+
+  .how-we-do-it-title {
+    margin-bottom: 30px;
+    font-family: $font;
+    text-align: left;
   }
 
   .how-we-do-it-item {
