--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -1,5 +1,5 @@
  <!--why choose us-->
- <section>
+<!-- <section>
     <h2>Почему нас выбирают</h2>
     <ul>
         <li>01<p>Обучение в малых командах</p></li>
@@ -9,33 +9,47 @@
         <li>05<p>Прогамма курса соответствует требованиям МОН Украины</p></li>
         <li>06<p>Набор команд по уровням знаний</p></li>
     </ul>
-</section>
+</section> -->
 
 <!--teacher-->
-<section>
-   <h2>Преподаватель</h2>
-   <img src="" alt="woman in black shirt" width="243" height="306">
-   <h2>Елена Морева</h2>
-   <hr>
-   <ul>
-       <li>
-           Опыт подготовки учеников к ВНО - 6 лет  
-       </li>
-       <li>
-           Собственный результат сдачи ВНО - 197 баллов 2 года подряд
-       </li>
-       <li>
-           Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
-       </li>
-   </ul>
-   <p>
-       Высшее образование  получила в Институте международных отношений НАУ по специальности переводчик-аналитик. 
-   </p>
-   <p>
-       В свободное время  проходит курсы от лучших университетов мира по эффективному преподаванию и методикам написания сочинений. 
-   </p>
-   <p>
-       В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
-   </p>
-   <a href="">Cambrige English Entry Level Certificate</a>
-</section>
+<section class="teacher_area">
+    <h2 class="teacher_title">Преподаватель</h2>
+     <picture class="teacher_picture_img">
+        <source srcset="./images-teacher/teacher-desktop.webp 1x, ./images-teacher/teacher-desktop@2x.webp 2x" 
+        media="(min-width: 1200px)" type="image/webp">
+        <source srcset="./images-teacher/teacher-desktop.jpg 1x, ./images-teacher/teacher-desktop@2x.jpg 2x" 
+        media="(min-width: 1200px)">
+        <source srcset="./images-teacher/teacher-tablet.webp 1x, ./images-teacher/teacher-tablet@2x.webp 2x" 
+        media="(min-width: 768px)" type="image/webp">
+        <source srcset="./images-teacher/teacher-tablet.jpg 1x, ./images-teacher/teacher-tablet@2x.jpg 2x" 
+        media="(min-width: 768px)">
+        <source srcset="./images-teacher/teacher-mobile.webp 1x, ./images-teacher/teacher-mobile@2x.webp 2x" 
+        media="(min-width: 320px)" type="image/webp">
+        <source srcset="./images-teacher/teacher-mobile.jpg 1x, ./images-teacher/teacher-mobile@2x.jpg 2x" 
+        media="(min-width: 320px)"> 
+    <img class="teacher_img"  src="./images-teacher/teacher-mobile.jpg" alt="woman in black shirt">
+    </picture>
+    <h2 class="teacher_name">Елена Морева</h2>
+    <hr>
+    <ul class="teacher_list">
+        <li class="teacher_skills">
+            Опыт подготовки учеников к ВНО - 6 лет  
+        </li>
+        <li class="teacher_skills">
+            Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+        </li>
+        <li class="teacher_skills">
+            Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
+        </li>
+    </ul>
+    <p class="teacher_education">
+        Высшее образование  получила в Институте международных отношений НАУ по специальности переводчик-аналитик. 
+    </p>
+    <p class="teacher_education">
+        В свободное время  проходит курсы от лучших университетов мира по эффективному преподаванию и методикам написания сочинений. 
+    </p>
+    <p class="teacher_education">
+        В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).
+    </p>
+    <a class="teacher_certificate" href="">Cambrige English Entry Level Certificate</a>
+ </section>
