--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -2,9 +2,41 @@
 <section class="section">
   <div class="container">
     <h2 class="subtitle">Преподаватель</h2>
+    <picture>
+      <source
+        srcset="
+          ./images/teacher/teacher1200@1x.webp 1x,
+          ./images/teacher/teacher1200@2x.webp 2x
+        "
+        media="(min-width: 1344px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/teacher/teacher1200@1x.jpg 1x,
+          ./images/teacher/teacher1200@2x.jpg 2x
+        "
+        media="(min-width: 1344px)"
+      />
+      <source
+        srcset="
+          ./images/teacher/teacher320@1x.webp 1x,
+          ./images/teacher/teacher320@2x.webp 2x
+        "
+        media="(min-width: 319px)"
+        type="image/webp"
+      />
+      <source
+        srcset="
+          ./images/teacher/teacher320@1x.jpg 1x,
+          ./images/teacher/teacher320@2x.jpg 2x
+        "
+        media="(min-width: 319px)"
+      />
+
       <img
         class="image-teacher"
-        src="../images/teacher/teacher320_1x.jpg"
+        src="./images/teacher/teacher320@1x.jpg"
         alt="учительница"
       />
     </picture>
