--- a/src/partials/advantage.html
+++ b/src/partials/advantage.html
@@ -3,8 +3,7 @@
    У нас секции или артикл ?
   Класс/Паршал Сеция, контейнер?
   Брейкпоинт другие 320, 768, 1680
-  Сброс стилей на списки
-  добавить фон в переменную
+   добавить шрифт в переменную
   Подключить шрифты
   Миксин для стилей текста
           @mixin font($fw, $fs, $lh, $ta, $ls) {
