Создал структуру проекта

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,24 @@
-/*
- * Главный файл стилей.
- * Все паршалы подключаются сюда.
- */
+@import './utils/variables';
+@import './utils/visually-hidden';
+@import './utils/mixins';
 
-// Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './base/common';
+@import './base/container';
+
+@import './components/title';
+@import './components/button';
+@import './components/section';
+@import './components/backdrop-modal';
+@import './components/lock';
+@import './components/logo';
+
+@import './layout/header';
+@import './layout/hero';
+@import './layout/advanteges';
+@import './layout/approach';
+@import './layout/porgram';
+@import './layout/teacher';
+@import './layout/garantee';
+@import './layout/reviews';
+@import './layout/reg-form';
+@import './layout/footer';
