--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -2,12 +2,13 @@
   <div class="container">
     <h2 class="features-title section-title">Как мы это делаем</h2>
     <ul class="features-list">
-      <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#study-program"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#study-program"></use>
+          </svg>
+        </a>
+
         <h3 class="features-subject">
           Адаптированная программа подготовки к ВНО
         </h3>
@@ -17,15 +18,13 @@
           писать сочинения.
         </p>
       </li>
-    </ul>
-
-    <ul class="features-list">
       <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#mobile-learning"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#mobile-learning"></use>
+          </svg>
+        </a>
         <h3 class="features-subject">
           Аудитория и <span class="line-break">онлайн-обучение</span>
         </h3>
@@ -38,15 +37,12 @@
           >
         </p>
       </li>
-    </ul>
-
-    <ul class="features-list">
-      <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#open-book"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#open-book"></use>
+          </svg>
+        </a>
         <h3 class="features-subject">Привычка читать на английском языке</h3>
         <span class="features-space">—</span>
         <p class="features-subtitle">
@@ -56,15 +52,12 @@
           >
         </p>
       </li>
-    </ul>
-
-    <ul class="features-list">
-      <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#support"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#support"></use>
+          </svg>
+        </a>
         <h3 class="features-subject">
           <span class="line-break">Психологическая</span>поддержка
         </h3>
@@ -77,15 +70,12 @@
           <span class="line-break">подготовку уверенности в себе.</span>
         </p>
       </li>
-    </ul>
-
-    <ul class="features-list">
-      <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#female-student"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#female-student"></use>
+          </svg>
+        </a>
         <h3 class="features-subject">Обучение по авторским пособиям</h3>
         <span class="features-space">—</span>
         <p class="features-subtitle">
@@ -96,14 +86,12 @@
           >
         </p>
       </li>
-    </ul>
-    <ul class="features-list">
-      <li class="features-box-svg">
-        <svg class="features-icon" width="45px" height="48px">
-          <use href="./images/icons/sprite.svg#audio-book"></use>
-        </svg>
-      </li>
-      <li class="features-card-content">
+      <li class="features-list-item">
+        <a href="/" class="features-link">
+          <svg class="features-icon" width="45px" height="48px">
+            <use href="./images/icons/sprite.svg#audio-book"></use>
+          </svg>
+        </a>
         <h3 class="features-subject">
           Умение воспринимать устную английскуб речь
         </h3>
