--- a/src/sass/layout/_features.scss
+++ b/src/sass/layout/_features.scss
@@ -3,7 +3,9 @@
   margin-bottom: 30px;
 }
 .features-list {
-  width: 280px;
+  width: 100%;
+}
+.features-list-item {
   height: 280px;
   background-color: var(--secondary-title-color);
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
@@ -11,8 +13,7 @@
   &:not(last-child) {
     margin-bottom: 15px;
   }
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: var(--accent-color);
   }
   &:hover .features-icon {
@@ -31,7 +32,7 @@
     color: var(--secondary-title-color);
   }
 }
-.features-box-svg {
+.features-link {
   height: 98px;
   display: flex;
   justify-content: center;
