Добавила стили для формы

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,9 +11,10 @@ $mobile: 320px;
 $tablet: 768px;
 $desktop: 1344px;
 
-@mixin font($fw, $fs, $lh, $ls) {
+@mixin font($fw, $fs, $lh, $ls, $cl) {
   font-weight: $fw;
   font-size: $fs;
   line-height: $lh;
   letter-spacing: $ls;
+  color: $cl;
 }
