add header mobile version

--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -2,19 +2,19 @@
 $font: 'Montserrat', sans-serif;
 
 //background colors
-$light-bg: #E5E5E5;
-$sec-ligth-bg: #F1F1F1;
+$light-bg: #e5e5e5;
+$sec-ligth-bg: #f1f1f1;
 $dark-bg: #111518;
 $mob-menu-bg: rgba(17, 21, 24, 0.9);
 
 //font colors
 $white-font: #ffffff;
 $dark-font: #111518;
-$light-font: #B9B9B9;
-$sec-light-font: #3D3D3D;
+$light-font: #b9b9b9;
+$sec-light-font: #3d3d3d;
 
 // accent color
-$orange: #FF6B09;
+$orange: #ff6b09;
 
 // translate settings
 $transSet: 250ms cubic-bezier(0.4, 0, 0.2, 1);
