--- a/src/sass/layouts/_guarantee.scss
+++ b/src/sass/layouts/_guarantee.scss
@@ -2,7 +2,8 @@
 background-color: $sec-ligth-bg;
 padding-top: 30px;
 padding-bottom: 30px;
-padding-left: 7px;
+padding-left: 6px;
+// padding-right: 20px;
 }
 
 .accent-color {
@@ -30,6 +31,8 @@ font-size: 12px;
 line-height: 1.67;
 
 color: $sec-light-font;
+
+// width: 100%;
 }
 .guarantee-item {
 position: relative;
