Сделал мобильную версию

--- a/src/sass/layout/_benefits.scss
+++ b/src/sass/layout/_benefits.scss
@@ -3,8 +3,8 @@
   padding-top: 50px;
   height: 545px;
   &-title {
-    padding-left: 10px;
-    padding-right: 10px;
+    // padding-left: 10px;
+    // padding-right: 10px;
     margin-bottom: 28px;
     font-weight: 800;
     font-size: 20px;
@@ -21,8 +21,8 @@
   position: absolute;
   width: 280px;
   padding: 0;
-  margin-left: 10px;
-  margin-right: 10px;
+  // margin-left: 10px;
+  // margin-right: 10px;
   padding-bottom: 20px;
   padding-top: 20px;
   padding-left: 30px;
@@ -44,13 +44,18 @@
     &::before {
       font-family: $main-font;
       display: block;
+      // align-items: center;
+      // margin-right: 10px;
+      // width: 20px;
+      // height: 2px;
+      // background-color: #ff6b09;
       margin-bottom: 5px;
       color: #ff6b09;
       font-weight: 700;
       font-size: 14px;
       line-height: 1.214;
       letter-spacing: 0.08em;
-      content: '- ' counter(number, decimal-leading-zero);
+      content: '— ' counter(number, decimal-leading-zero);
     }
     &__item:not(:last-child) {
       margin-bottom: 10px;
@@ -64,9 +69,10 @@
   }
   .benefits-title {
     line-height: 1.307;
+    margin-bottom: 25px;
   }
   .benefits-list {
-    column-count: 2;
+    // column-count: 2;
     width: 688px;
 
     padding-bottom: 26px;
