--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -12,17 +12,17 @@
   overflow: hidden;
 }
 
-.container {
-  padding: 0px 10px;
-  margin: 0 auto;
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
-  }
-  @media screen and (min-width: $desktop) {
-    width: $desktop;
-    padding: 0px 15px;
-  }
-}
+// .container {
+//   padding: 0px 10px;
+//   margin: 0 auto;
+//   @media screen and (min-width: $tablet) {
+//     width: $tablet;
+//   }
+//   @media screen and (min-width: $desktop) {
+//     width: $desktop;
+//     padding: 0px 15px;
+//   }
+// }
 .container {
   padding: 0 20px;
   margin: 0 auto;
