--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,5 @@
-<header>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-    </ul>
+<header class="header">
+    <!-- Игорь -->
+    <h1>Игорь</h1>
+    <img src="./images/demo.jpg" alt="pes" width="250">
 </header>
