--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,10 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './header';
+@import './hero';
+@import './products';
+@import './howItsMade';
+@import './coments';
+@import './boxes';
+@import './footer';
