Дбавляет разметку и стили

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,23 @@
-<section>
+<section class="section container">
   <h2 class="visually-hidden">Преимущества</h2>
+  <ul class="advantages-list">
+    <li class="advantages-item">
+      <svg width="59" height="60">
+        <use href="./images/sprite.svg#icon-advantages-1"></use>
+      </svg>
+      <p class="advantages-text">Адаптированная авторская программа ВНО</p>
+    </li>
+    <li class="advantages-item">
+      <svg width="59" height="60">
+        <use href="./images/sprite.svg#icon-advantages-2"></use>
+      </svg>
+      <p class="advantages-text">Современные методики обучения</p>
+    </li>
+    <li class="advantages-item">
+      <svg width="59" height="60">
+        <use href="./images/sprite.svg#icon-advantages-3"></use>
+      </svg>
+      <p class="advantages-text">Финансовая гарантия результата</p>
+    </li>
+  </ul>
 </section>
