--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,19 +2,19 @@
   <h2 class="visually-hidden">Преимущества</h2>
   <ul class="advantages-list">
     <li class="advantages-item">
-      <svg width="59" height="60">
+      <svg class="advantages-icon" width="59" height="60">
         <use href="./images/sprite.svg#icon-advantages-1"></use>
       </svg>
       <p class="advantages-text">Адаптированная авторская программа ВНО</p>
     </li>
     <li class="advantages-item">
-      <svg width="59" height="60">
+      <svg class="advantages-icon" width="59" height="60">
         <use href="./images/sprite.svg#icon-advantages-2"></use>
       </svg>
       <p class="advantages-text">Современные методики обучения</p>
     </li>
     <li class="advantages-item">
-      <svg width="59" height="60">
+      <svg class="advantages-icon" width="59" height="60">
         <use href="./images/sprite.svg#icon-advantages-3"></use>
       </svg>
       <p class="advantages-text">Финансовая гарантия результата</p>
