--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -1,7 +1,7 @@
-// .section.container {
-//   padding-left: 52px;
-//   padding-right: 52px;
-// }
+.section.container {
+  padding-left: 52px;
+  padding-right: 52px;
+}
 
 .advantages-item {
   display: flex;
@@ -14,4 +14,5 @@
 
 .advantages-text {
   @include font(700, 14px, 1.429, 0.08em);
+  width: 146px;
 }
