--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import './example';
 // ==============LAYOUT============
 @import './layout/header';
+@import "./layout/methods";
 // ==============BASE==============
 @import './base/common';
 @import './base/container';
