--- a/src/partials/description.html
+++ b/src/partials/description.html
@@ -25,7 +25,7 @@
         </p>
       </li>
       <li class="description-list__item">
-        <svg>
+        <svg class="description-list__icon">
           <use src=""></use>
         </svg>
         <h3 class="description-list__title">
