Вносит правки main.scss

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,7 +5,7 @@
 @import './base/common';
 @import './base/container';
 
-@import './components/title';
+@import './components/tittle';
 @import './components/button';
 @import './components/section';
 @import './components/backdrop-modal';
