--- a/src/sass/components/problems.scss
+++ b/src/sass/components/problems.scss
@@ -42,8 +42,8 @@
   letter-spacing: 0.08em;
   color: #111518;
   margin: 0;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  padding-top: 5px;
+  padding-bottom: 10px;
 }
 
 @media screen and (min-width: 768px) {
@@ -53,22 +53,20 @@
   .problems-list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
     padding-top: 30px;
-    padding-bottom: 26px;
+
     padding-left: 96px;
     padding-right: 109px;
-
     max-width: 688px;
     height: 303px;
   }
   .problems-item {
-    display: block;
-    width: calc((100% - 2 * 22px) / 2);
+    width: calc(100% / 2);
   }
-  .problems-item:nth-child(2n-1) {
-    margin-right: 24px;
-  }
+
   .problems-description {
-    margin: 0;
+    margin-bottom: 0;
   }
 }
