Adds page-header for mobile (final)

--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -4,7 +4,6 @@
         <a href="./index.html" class="logo link" aria-label="Логотип сайта" lang="en">
             <svg class="logo-icon">
                 <use class="logo-main" href="./images/sprite.svg#logo-main"></use>
-                <!-- <use class="logo-dark" href="./images/sprite.svg#logo-dark"></use> -->
             </svg>
         </a>
         <button type="button" class="menu-btn" aria-expanded="false" aria-controls="menu" data-menu-button>
@@ -16,7 +15,12 @@
     </div>
     <div class="menu" id="menu" data-menu>
         <nav class="nav">
-            <ul class="nav-list">
+            <a href="./index.html" class="logo-dark link" aria-label="Логотип сайта" lang="en">
+                <svg class="logo-icon">
+                    <use class="logo-dark" href="./images/sprite.svg#logo-dark"></use>
+                </svg>
+            </a>
+            <ul class="nav-list list">
                 <li class="nav-item">
                     <a href="#" class="nav-link link">Программа обучения</a>
                 </li>
