--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -8,22 +8,104 @@
   align-items: center;
 }
 
-.logo {
-  display: inline-block;
-  padding-bottom: 0;
+.logo,
+.logo-dark {
+  display: block;
+  margin: 0;
+  padding: 0;
   padding-top: 30px;
 }
 
+.logo-dark {
+  z-index: 100;
+}
+
 .logo-icon {
+  display: block;
+  margin: 0;
+  padding: 0;
   width: 80px;
   height: 29px;
 }
 
 .menu-btn {
-  display: inline-block;
+  display: block;
+  width: 20px;
+  height: 12px;
   margin: 0;
   padding: 0;
+  padding-top: 5px;
   border: none;
+  z-index: 100;
   background-color: transparent;
   cursor: pointer;
+
+  & .menu-close-icon {
+    display: none;
+  }
+
+  &.is-open .menu-close-icon {
+    display: block;
+  }
+
+  &.is-open .menu-icon {
+    display: none;
+  }
+}
+
+.nav-link {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  font-weight: 800;
+  line-height: 1.8;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+    scroll-behavior: smooth;
+  }
+}
+
+.nav-list {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.nav-btn {
+  display: block;
+  margin: 0 auto;
+  padding: 14px 14px;
+  border: 2px solid var(--accent-color);
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.25;
+  text-align: center;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+
+  color: var(--accent-color);
+}
+
+.menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow-y: scroll;
+  width: 100vw;
+  height: 100vh;
+  z-index: 99;
+  background: rgba(17, 21, 24, 0.9);
+
+  &.is-open {
+    display: block;
+  }
 }
