исправлены ошибки в разметке, добавлены обнуления некоторых тегов

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -130,26 +130,25 @@
     </picture> -->
 
     <h2 class="choice__section-title">Почему нас выбирают</h2>
-  
+
     <dl class="choice__list">
-      <dt class="choice__item"> 
-        <dd class="choice__descr">Обучение в малых командах</dd>
-      </dt>
-      <dt class="choice__item">
-        <dd class="choice__descr">Визуализированные конспекты</dd>
-      </dt>
-      <dt class="choice__item">
-        <dd class="choice__descr">Каждое занятие имеет цель и конкретный результат</dd>
-      </dt>
-      <dt class="choice__item">
-        <dd class="choice__descr">Реальные результаты преподавателя</dd>
-      </dt>
-      <dt class="choice__item">
-        <dd class="choice__descr">Программа курса соответствует требованиям МОН Украины</dd>
-      </dt>
-      <dt class="choice__item">
-        <dd class="choice__descr">Набор команд по уровням знаний</dd>
-      </dt>
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">Обучение в малых командах</dd>
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">Визуализированные конспекты</dd>
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">
+        Каждое занятие имеет цель и конкретный результат
+      </dd>
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">Реальные результаты преподавателя</dd>
+
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">
+        Программа курса соответствует требованиям МОН Украины
+      </dd>
+      <dt class="choice__item"></dt>
+      <dd class="choice__descr">Набор команд по уровням знаний</dd>
     </dl>
   </div>
 </section>
