Пофиксил пути картинок

--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,191 +1,222 @@
 <section class="reviews">
-  <h2 class="reviews__title title">Отзывы выпускников</h2>
+  <div class="reviews__container">
+    <h2 class="reviews__title title">Отзывы выпускников</h2>
 
-  <div class="reviews__thumb-picture">
-    <picture>
-      <source
-        srcset="
-          ./img/reviews/img1_mobi_x1.jpg 1x,
-          ./img/reviews/img1_mobi_x2.jpg 2x
-        "
-        media="(max-width: 767px)"
-      />
+    <div class="reviews__thumb-picture">
+      <picture class="reviews__picture">
+        <source
+          srcset="
+            ../images/reviews/img1_mobi_x1.jpg 1x,
+            ../images/reviews/img1_mobi_x2.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
 
-      <source
-        srcset="
-          ./img/reviews/img1_tablet_x1.jpg 1x,
-          ./img/reviews/img1_tablet_x1.jpg 2x
-        "
-        media="(min-width: 768px)"
-      />
+        <source
+          srcset="
+            ../images/reviews/img1_tablet_x1.jpg 1x,
+            ../images/reviews/img1_tablet_x1.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
 
-      <img src="./img/reviews/img1_mobi_x1.jpg" alt="Фото выпускника" />
-    </picture>
+        <img
+          src="../images/reviews/img1_mobi_x1.jpg"
+          alt="Фото выпускника"
+        />
+      </picture>
 
-    <a class="link" href="#">
-      <svg width="30px" height="30px">
-        <use href="./img/sprite.svg#icon-vk"></use>
-      </svg>
-    </a>
-  </div>
-  <div class="reviews__thumb-info">
-    <h3 class="reviews__name">Тоня Кучеровская</h3>
-    <p class="reviews__education">
-      Выпуск 2015-го года, Національний університет біоресурсів і
-      природокористування України
-    </p>
-    <p class="reviews__opinion">
-      За короткий час занять з Оленою я опанувала граматику і поповнила свій
-      зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що
-      знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді
-      хвилювала моя успішність. Вона стала для мене авторитетом, проте я не
-      тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
-      похизуватись тим, що я студен ...
-      <a href="#">Читать дальше</a>
-    </p>
-  </div>
+      <a class="link" href="#">
+        <svg width="30px" height="30px">
+          <use href="../images/sprite.svg#icon-vk"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="reviews__thumb-info">
+      <h3 class="reviews__name">Тоня Кучеровская</h3>
+      <p class="reviews__education">
+        Выпуск 2015-го года, Національний університет біоресурсів і
+        природокористування України
+      </p>
+      <p class="reviews__opinion">
+        За короткий час занять з Оленою я опанувала граматику і поповнила
+        свій зовсім пустий словниковий запас. З першого ж заняття я
+        зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями,
+        тому що її справді хвилювала моя успішність. Вона стала для мене
+        авторитетом, проте я не тремтіла на уроках, маючи страх зробити
+        найменшу помилку. Зараз я можу похизуватись тим, що я студен ...
+        <a href="#">Читать дальше</a>
+      </p>
+    </div>
 
-  <div class="reviews__thumb-slider">
-    <ul class="reviews__list list">
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img2_mobi_x1.jpg 1x,
-                ./img/reviews/img2_mobi_x2.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
-            <source
-              srcset="
-                ./img/reviews/img2_tablet_x1.jpg 1x,
-                ./img/reviews/img2_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+    <div class="reviews__slider">
+      <ul class="reviews__list list">
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img2_mobi_x1.jpg 1x,
+                  ../images/reviews/img2_mobi_x2.jpg 2x
+                "
+                media="(max-width: 767px)"
+              />
+              <source
+                srcset="
+                  ../images/reviews/img2_tablet_x1.jpg 1x,
+                  ../images/reviews/img2_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img2_mobi_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img3_mobi_x1.jpg 1x,
-                ./img/reviews/img3_mobi_x2.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
+              <img
+                src="../images/reviews/img2_mobi_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img3_mobi_x1.jpg 1x,
+                  ../images/reviews/img3_mobi_x2.jpg 2x
+                "
+                media="(max-width: 767px)"
+              />
 
-            <source
-              srcset="
-                ./img/reviews/img3_tablet_x1.jpg 1x,
-                ./img/reviews/img3_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <source
+                srcset="
+                  ../images/reviews/img3_tablet_x1.jpg 1x,
+                  ../images/reviews/img3_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img2_mobi_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img4_mobi_x1.jpg 1x,
-                ./img/reviews/img4_mobi_x2.jpg 2x
-              "
-              media="(max-width: 767px)"
-            />
+              <img
+                src="../images/reviews/img2_mobi_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img4_mobi_x1.jpg 1x,
+                  ../images/reviews/img4_mobi_x2.jpg 2x
+                "
+                media="(max-width: 767px)"
+              />
 
-            <source
-              srcset="
-                ./img/reviews/img4_tablet_x1.jpg 1x,
-                ./img/reviews/img4_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <source
+                srcset="
+                  ../images/reviews/img4_tablet_x1.jpg 1x,
+                  ../images/reviews/img4_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img4_mobi_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img5_tablet_x1.jpg 1x,
-                ./img/reviews/img5_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <img
+                src="../images/reviews/img4_mobi_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img5_tablet_x1.jpg 1x,
+                  ../images/reviews/img5_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img5_tablet_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img6_tablet_x1.jpg 1x,
-                ./img/reviews/img6_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <img
+                src="../images/reviews/img5_tablet_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img6_tablet_x1.jpg 1x,
+                  ../images/reviews/img6_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img6_tablet_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img7_tablet_x1.jpg 1x,
-                ./img/reviews/img7_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <img
+                src="../images/reviews/img6_tablet_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img7_tablet_x1.jpg 1x,
+                  ../images/reviews/img7_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img7_tablet_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-      <li class="reviews__item">
-        <button class="reviews__button button">
-          <picture>
-            <source
-              srcset="
-                ./img/reviews/img8_tablet_x1.jpg 1x,
-                ./img/reviews/img8_tablet_x2.jpg 2x
-              "
-              media="(min-width: 768px)"
-            />
+              <img
+                src="../images/reviews/img7_tablet_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+        <li class="reviews__item">
+          <button class="reviews__button button">
+            <picture>
+              <source
+                srcset="
+                  ../images/reviews/img8_tablet_x1.jpg 1x,
+                  ../images/reviews/img8_tablet_x2.jpg 2x
+                "
+                media="(min-width: 768px)"
+              />
 
-            <img src="./img/reviews/img8_tablet_x1.jpg" alt="Фото выпускника" />
-          </picture>
-        </button>
-      </li>
-    </ul>
-    <button type="button" class="reviews__arrow reviews__arrow--left button">
-      <svg width="25px" height="25px">
-        <use href="./img/sprite.svg#icon-arrow-to-left"></use>
-      </svg>
-    </button>
-    <button type="button" class="reviews__arrow reviews__arrow--right button">
-      <svg width="25px" height="25px">
-        <use href="./img/sprite.svg#icon-arrow-to-right"></use>
-      </svg>
-    </button>
+              <img
+                src="../images/reviews/img8_tablet_x1.jpg"
+                alt="Фото выпускника"
+              />
+            </picture>
+          </button>
+        </li>
+      </ul>
+      <button
+        type="button"
+        class="reviews__arrow reviews__arrow--left button"
+      >
+        <svg width="25px" height="25px">
+          <use href="../images/sprite.svg#icon-arrow_left"></use>
+        </svg>
+      </button>
+      <button
+        type="button"
+        class="reviews__arrow reviews__arrow--right button"
+      >
+        <svg width="25px" height="25px">
+          <use href="../images/sprite.svg#icon-arrow_right"></use>
+        </svg>
+      </button>
+    </div>
   </div>
 </section>
->>>>>>> Stashed changes
