настраивает отображение img

--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -3,28 +3,28 @@
     <h2 class="teach-title">Преподаватель</h2>
     <div class="container">
         <picture>
-            <source srcset="./images/teacher/teacher-desktop-1.webp, ./images/teacher/teacher-desktop-1@2x.webp 2x"
+            <source srcset="./images/teacher/teacher-desktop-1.webp 1x, ./images/teacher/teacher-desktop-1@2x.webp 2x"
                 media="(min-width: 1400px)" 
                 type="image/webp">
 
-            <source srcset="./images/teacher/teacher-desktop-1.jpg, ./images/teacher/teacher-desktop-1@2x.jpg 2x"
+            <source srcset="./images/teacher/teacher-desktop-1.jpg 1x, ./images/teacher/teacher-desktop-1@2x.jpg 2x"
                 media="(min-width: 1400px)">
 
-            <source srcset="./images/teacher/teacher-tablet-1.webp, ./images/teacher/teacher-tablet-1@2x.webp 2x"
+            <source srcset="./images/teacher/teacher-tablet-1.webp 1x, ./images/teacher/teacher-tablet-1@2x.webp 2x"
                 media="(min-width: 768px)" 
                 type="image/webp">
 
-            <source srcset="./images/teacher/teacher-tablet-1.jpg, ./images/teacher/teacher-tablet-1@2x.jpg 2x"
+            <source srcset="./images/teacher/teacher-tablet-1.jpg 1x, ./images/teacher/teacher-tablet-1@2x.jpg 2x"
                 media="(min-width: 768px)">
 
-            <source srcset="./images/teacher/teacher-mobile-1.webp, ./images/teacher/teacher-mobile-1@2x.webp 2x"
+            <source srcset="./images/teacher/teacher-mobile-1.webp 1x, ./images/teacher/teacher-mobile-1@2x.webp 2x"
                 media="(min-width: 320px)" 
                 type="image/webp">
 
-            <source srcset="./images/teacher/teacher-mobile-1.jpg, ./images/teacher/teacher-mobile-1@2x.jpg 2x"
+            <source srcset="./images/teacher/teacher-mobile-1.jpg 1x, ./images/teacher/teacher-mobile-1@2x.jpg 2x"
                 media="(min-width: 320px)">
 
-            <img class="teacher-item__photo" src="./images/teacher-desktop-1.jpg" alt="Преподаватель" />
+            <img class="teacher-item__photo" src="./images/teacher/teacher-desktop-1.jpg" alt="Преподаватель" />
 
         </picture>
     </div>
