--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -1,6 +1,6 @@
 .how-we-do-it {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 130px;
+  padding-bottom: 130px;
 }
 
 .how-we-do-it-title {
@@ -84,17 +84,25 @@
   .how-we-do-it-list {
     display: flex;
     flex-wrap: wrap;
-    margin: -15px;
   }
 
   .how-we-do-it-item {
-    flex-basis: calc((100% - 2 * 30px) / 2);
-    margin-bottom: 28px;
+    flex-basis: calc((100% - 2 * 20px) / 2);
+    margin-bottom: 27px;
     margin-right: 20px;
     width: 334px;
     height: 334px;
     padding: 40px 22px 30px 22px;
   }
+
+  .how-we-do-it-item:nth-child(2n + 2) {
+    margin-right: 0px;
+  }
+
+  .how-we-do-it-item:nth-last-child(2) {
+    margin-bottom: 0px;
+  }
+
   .hwd-icon {
     margin-bottom: 30px;
   }
@@ -106,7 +114,7 @@
 
 @media screen and (min-width: 1314px) {
   .how-we-do-it-item {
-    min-width: 425px;
+    width: 425px;
     height: 396px;
     margin-right: 20px;
     margin-bottom: 20px;
@@ -117,9 +125,23 @@
     margin-bottom: 30px;
     font-family: $font;
     text-align: left;
+    margin-bottom: 50px;
+  }
+
+  .how-we-do-it-list-title {
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 0.08em;
+  }
+
+  .how-we-do-it-list-text {
+    font-size: 18px;
+    line-height: 28px;
+
+    letter-spacing: 0.08em;
   }
 
   .how-we-do-it-item {
-    flex-basis: calc((100% - 3 * 30px) / 3);
+    flex-basis: calc((100% - 3 * 20px) / 3);
   }
 }
