add mixin for container

--- a/src/partials/boxes.html
+++ b/src/partials/boxes.html
@@ -1,4 +1,6 @@
 <section class="boxes">
-    <!-- Антон -->
-    <h2>Boxes Anton</h2>
+    <div class="boxes-container">
+        <!-- Антон -->
+        <h2>Boxes Anton</h2>
+    </div>
 </section>
