--- a/src/partials/coments.html
+++ b/src/partials/coments.html
@@ -1,4 +1,6 @@
 <section class="coments">
-    <!-- Максим -->
-    <h2>Slider Maksim</h2>
+    <div class="coments-container">
+        <!-- Максим -->
+        <h2>Slider Maksim</h2>
+    </div>
 </section>
