--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,6 @@
 <footer class="footer">
-    <!-- Марина -->
-    <h2>footer Marina</h2>
+    <div class="footer-container">
+        <!-- Марина -->
+        <h2>footer Marina</h2>
+    </div>
 </footer>
