--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,7 @@
 <header class="header">
     <!-- Игорь -->
-    <h1>Игорь</h1>
-    <img src="./images/demo.jpg" alt="pes" width="250">
+    <div class="header-container">
+        <h1>Игорь</h1>
+        <img src="./images/demo.jpg" alt="pes" width="250">
+    </div>
 </header>
