--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,7 @@
 <section class="hero">
-    <!-- Игорь -->
-    <h2>Игорь hearo </h2>
+    <div class="hero-container">
+        <!-- Игорь -->
+        <h2>Игорь hearo </h2>
+
+    </div>
 </section>
