--- a/src/partials/howIItsMade.html
+++ b/src/partials/howIItsMade.html
@@ -1,4 +1,6 @@
 <section class="made">
-    <!-- Женя -->
-    <h2>How it's made - Женя</h2>
+    <div class="made-container">
+        <!-- Женя -->
+        <h2>How it's made - Женя</h2>
+    </div>
 </section>
