--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,6 @@
 <section class="products">
-    <!-- Полина -->
-    <h2>Produts Polina</h2>
+    <div class="products-container">
+        <!-- Полина -->
+        <h2>Produts Polina</h2>
+    </div>
 </section>
