--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,4 +1,9 @@
+@import './styleDefoult/mixin';
 .footer{
-    height: 100px;
+    
     background-color: gold;
+}
+.footer-container {
+    @include container();
+    height: 100px;
 }
