--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,5 @@
-.header {
-     background-color: red;
+@import './styleDefoult/mixin';
+.header-container{
+     @include container();
+     // background-color: red;
 }
