--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,3 +1,8 @@
+@import './styleDefoult/mixin';
 .hero{
     background-color: yellow;
+}
+.hero-container {
+    @include container();
+    // background-color: red;
 }
