--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,3 +1,8 @@
+@import './styleDefoult/mixin';
 .products{
     background-color: gray;
+}
+.products-container {
+    @include container();
+    // background-color: red;
 }
