--- a/src/sass/_boxes.scss
+++ b/src/sass/_boxes.scss
@@ -1,3 +1,10 @@
+@import './styleDefoult/mixin';
+
 .boxes{
     background-color: blue;
 }
+.boxes-container {
+    @include container();
+    
+}
+
