--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -2,11 +2,27 @@
   font-family: Montserrat;
   font-style: normal;
   font-weight: 800;
-  font-size: 26px;
   line-height: 130%;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  margin-bottom: 24px;
+}
+@media screen and (min-width: 320px) {
+  .subtitle {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .subtitle {
+    font-size: 26px;
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .subtitle {
+    font-size: 46px;
+    margin-bottom: 50px;
+  }
 }
 .teacher-name {
   font-family: Montserrat;
@@ -16,6 +32,14 @@
   line-height: 1.2;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
+  margin-bottom: 10px;
+}
+@media screen and (min-width: 1344px) {
+  .teacher-name {
+    font-size: 30px;
+    line-height: 1.123;
+    margin-bottom: 15px;
+  }
 }
 
 .teacher-list-item {
@@ -43,7 +67,6 @@
   line-height: 1.666;
   text-decoration-line: underline;
   color: var(--accent-color);
-  margin-bottom: 60px;
 }
 .guarantee-list-item {
   font-family: Montserrat;
@@ -58,6 +81,30 @@
   color: var(--accent-color);
 }
 .teacher-list-container {
-  margin-top: 24px;
-  margin-bottom: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+.teacher-list-item {
+  @media screen and (min-width: 320px) {
+    margin-top: 20px;
+    margin-bottom: 5px;
+  }
+}
+@media screen and (min-width: 320px) {
+  .teacher {
+    padding-top: 270px;
+    padding-bottom: 54px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .teacher {
+    padding-top: 302px;
+    padding-bottom: 50px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 329px;
+    padding-bottom: 130px;
+  }
 }
