--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -1,4 +1,5 @@
 .teacher {
+  padding-top: 39px;
   padding-bottom: 50px;
 }
 .teacher-title {
@@ -9,9 +10,12 @@
   line-height: 1.3;
   letter-spacing: 0.03em;
 }
-.teacher-img {
-  margin-bottom: 20px;
+@media screen and (max-width: 767px) {
+  .teacher-img {
+    margin-bottom: 20px;
+  }
 }
+
 .teacher-subtitle {
   padding-bottom: 10px;
   border-bottom: 1px solid #b9b9b9;
@@ -74,11 +78,74 @@
   color: var(--accent-color);
 }
 @media screen and (min-width: 768px) {
-  .teacher-container {
+  .teacher {
+    padding-top: 50px;
+  }
+  .teacher-title {
+    margin-bottom: 30px;
+    font-size: 26px;
+  }
+  .teacher-wrapper {
     display: flex;
   }
-  .teacher-img {
-    width: 530px;
-    height: 667px;
+  .teacher-list {
+    padding-bottom: 38px;
+  }
+  .teacher-right-side {
+    width: 402px;
+    padding-left: 40px;
+  }
+}
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 130px;
+    padding-bottom: 130px;
+  }
+  .teacher-title {
+    margin-bottom: 50px;
+    font-size: 46px;
+  }
+  .teacher-wrapper {
+    align-items: flex-end;
+  }
+  .teacher-right-side {
+    width: 642px;
+    padding-left: 30px;
+  }
+  .teacher-subtitle {
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+
+    font-size: 30px;
+  }
+  .teacher-list {
+    padding-bottom: 70px;
+    padding-left: 59px;
+  }
+  .teacher-list::after {
+    bottom: 15%;
+  }
+  .teacher-list-item:not(:last-child) {
+    margin-bottom: 35px;
+  }
+  .teacher-list-icon {
+    width: 24px;
+    height: 20px;
+  }
+  .teacher-list-text {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .teacher-desc {
+    font-size: 18px;
+    line-height: 1.556;
+  }
+  .teacher-desc:not(:last-of-type) {
+    margin-bottom: 28px;
+  }
+  .teacher-link {
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 1.556;
   }
 }
