--- a/src/sass/layouts/_how.scss
+++ b/src/sass/layouts/_how.scss
@@ -95,14 +95,6 @@
     padding: 40px 22px 30px 22px;
   }
 
-  .how-we-do-it-item:nth-child(2n + 2) {
-    margin-right: 0px;
-  }
-
-  .how-we-do-it-item:nth-last-child(2) {
-    margin-bottom: 0px;
-  }
-
   .hwd-icon {
     margin-bottom: 30px;
   }
@@ -112,9 +104,19 @@
   }
 }
 
+@media screen and (max-width: 1313px) {
+  .how-we-do-it-item:nth-child(2n + 2) {
+    margin-right: 0px;
+  }
+
+  .how-we-do-it-item:nth-last-child(2) {
+    margin-bottom: 0px;
+  }
+}
+
 @media screen and (min-width: 1314px) {
   .how-we-do-it-item {
-    width: 425px;
+    min-width: 424px;
     height: 396px;
     margin-right: 20px;
     margin-bottom: 20px;
@@ -139,6 +141,14 @@
     line-height: 28px;
 
     letter-spacing: 0.08em;
+  }
+
+  .how-we-do-it-item:nth-child(3n + 3) {
+    margin-right: 0px;
+  }
+
+  .how-we-do-it-item:nth-last-child(3) {
+    margin-bottom: 0px;
   }
 
   .how-we-do-it-item {
